Added code coverage